--- a/Code/styles/style.css
+++ b/Code/styles/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Heebo", sans-serif;
+    font-family: "Inter", sans-serif;
 }
 
 body {
@@ -55,6 +55,7 @@ nav a {
     position: relative;
     text-align: center;
 }
+
 .nav-link-active img {
     position: absolute;
     left: 50%;
@@ -168,10 +169,12 @@ nav a {
     cursor: pointer;
     transition: 0.3s;
 }
-.btn-secondary:hover{
+
+.btn-secondary:hover {
     background-color: white;
     color: black;
 }
+
 .open-hours {
     background-color: transparent;
     border-radius: 20px;
@@ -181,7 +184,6 @@ nav a {
     gap: 20px;
     margin-top: -8%;
     margin-right: 232px;
-    padding-right: 2;
 }
 
 
@@ -273,7 +275,7 @@ nav a {
 }
 
 
-.partners{
+.partners {
     background-color: white;
     height: 30vh;
     display: flex;
@@ -281,26 +283,83 @@ nav a {
     justify-content: center;
 }
 
-.pcontent{
+.pcontent {
     display: flex;
     gap: 10em;
 }
 
-.pcontent img{
+.pcontent img {
     height: 60px;
 }
 
 
-.space{
-    height: 10vh;
+.space {
+    height: 1vh;
 }
-.aboutus{
+
+.aboutus {
     height: 80vh;
+
 }
-.aucontent{
-    height: 80vh;
+
+.aucontent {
+    position: relative;
+    height: 120vh;
     background-color: #F4F8FB;
     border-radius: 23px;
-    width:198vh;
+    width: 198vh;
     margin-left: 12px;
+    overflow: hidden;
+    display: flex;
+    z-index: -3;
+    justify-content: space-between;
+}
+
+#circle {
+    height: 300px;
+    width: 300px;
+    border-radius: 100%;
+    background-color: #EBF3F5;
+
+    position: absolute;
+    top: -50px;
+    left: -50px;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.auleft {
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100px;
+    left: 100px;
+}
+
+#ab2img {
+    margin-top: 23px;
+}
+
+
+
+.imgtxt {
+    display: flex;
+}
+
+.exp-tag {
+    background-color: #5EE088;
+    border: 1px solid #5EE088;
+    padding: 0px 20px;
+    border-radius: 10px 10px 10px 0px;
+    font-size: 14px;
+    font-weight: 500;
+    height: 150px;
+    width: 241px;
+    position: relative;
+    display: flex;
+    align-items: center;
+    top: 150px;
+    right: 60px;
+    font-size: 20px;
 }
