--- a/Code/styles/style.css
+++ b/Code/styles/style.css
@@ -298,8 +298,9 @@ nav a {
 }
 
 .aboutus {
-    height: 80vh;
-
+    height: 110vh;
+    display: flex;
+    justify-content: space-between;
 }
 
 .aucontent {
@@ -362,4 +363,120 @@ nav a {
     top: 150px;
     right: 60px;
     font-size: 20px;
+}
+
+.auright {
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100px;
+    left: 50%;
+}
+
+#topau {
+    background-color: #2ecc70a8;
+    border: 4px solid #5EE088;
+    padding: 8px 20px;
+    border-radius: 12px 12px 0px 12px;
+    font-size: 16px;
+    font-weight: 700;
+
+    margin-bottom: 25px;
+    position: relative;
+    width: 140px;
+}
+
+.auright h3 {
+    color: #3498DB;
+}
+
+.testau {
+    display: flex;
+    position: relative;
+    top: 70px;
+    background-color: transparent;
+    height: 200px;
+    border: 2px solid #E1E1E1;
+    border-radius: 0px 12px 12px 12px;
+
+}
+
+.persons {
+    position: relative;
+    bottom: 30px;
+    right: 15px;
+}
+
+#srdimg {
+    position: absolute;
+    left: 45px;
+}
+
+.testau p {
+    color: #5B5B5B;
+    width: 460px;
+    position: relative;
+    top: 50px;
+    right: 30px;
+}
+
+.aubtm {
+    justify-content: center;
+    display: flex;
+
+}
+
+#abic {
+    position: relative;
+    top: 60px;
+    height: 30px;
+    right: 34px;
+
+}
+
+#lineico {
+    height: 1px;
+    width: 40%;
+    top: 155px;
+    left: 340px;
+    position: absolute;
+
+}
+
+.aubtm p {
+    position: relative;
+    top: 64px;
+    right: 34px;
+    color: #3498DB;
+}
+
+
+/* STATS */
+
+.stats{
+    height: 30vh;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.numbers{
+    display: flex;
+    
+}
+
+.op{
+    color: #3498DB;
+    display: flex;
+    gap: 150px;
+}
+
+.op h1{
+    font-size: 80px;
+}
+.op h3{
+    color: #313131;
+    font-weight: 400;
 }
