--- a/Code/styles/style.css
+++ b/Code/styles/style.css
@@ -8,6 +8,8 @@
 body {
     color: white;
     overflow-x: hidden;
+        font-family: "Inter", sans-serif;
+
 }
 
 .background-container {
@@ -454,7 +456,7 @@ nav a {
 
 /* STATS */
 
-.stats{
+.stats {
     height: 30vh;
     background-color: #fff;
     display: flex;
@@ -462,21 +464,207 @@ nav a {
     align-items: center;
 }
 
-.numbers{
+.numbers {
     display: flex;
-    
+
 }
 
-.op{
+.op {
     color: #3498DB;
     display: flex;
     gap: 150px;
 }
 
-.op h1{
+.op h1 {
     font-size: 80px;
 }
-.op h3{
+
+.op h3 {
     color: #313131;
     font-weight: 400;
 }
+
+.services {
+    height: 120vh;
+}
+
+
+
+.scontent {
+    position: relative;
+    height: 120vh;
+    background-color: #F4F8FB;
+    border-radius: 23px;
+    width: 198vh;
+    margin-left: 12px;
+    overflow: hidden;
+    display: flex;
+    z-index: -3;
+    justify-content: space-between;
+    padding-top: 5%;
+    padding-left: 17%;
+    display: block;
+}
+
+.scontent #topau {
+    height: 45px;
+    align-items: center;
+    width: 180px;
+    border: 3px solid #2ECC71;
+    background-color: #5EE088;
+}
+
+.top{
+    display: flex;
+    justify-content: space-between;
+}
+.top h2{
+    color: #3498DB;
+    font-size: 40px;
+}
+
+.top p {
+    color: black;
+    text-align: end;
+    width: 600px;
+    margin-right: 120px;
+    position: relative;
+    top: 23px;
+}
+
+.cardsection{
+    height: 320px;
+    background-color: white;
+    width: 320px;
+    border-radius: 30px;
+    margin-top: 30px;
+    display: flex;
+
+}
+.cardcontent{
+    display: block;
+
+}
+.cardtop{
+    display: flex;
+    margin-top: 2px;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+.cardtop img{
+    margin-top: 30px;
+    margin-left: 30px;
+}
+
+.cardtop h1{
+    color: #D6F6FD;
+     margin-top: 30px;
+    margin-right   : 30px;
+    font-size: 80px;
+}
+
+
+.cardtext{
+    margin-top: 25px;
+    margin-left: 30px;
+}
+
+
+.cardtext h3{
+    color: #2677BC;
+    font-weight: 600;
+}
+
+.cardtext p {
+    color: #5B5B5B;
+    margin-top: 12px;
+}
+
+.cardsection button{
+    background-color: transparent;
+    border: 1px solid #FF6F61;
+    border-radius: 23px;
+    padding: 12px 23px;
+    margin-top: 12px;
+    margin-left : 30px;
+    color: #FF6F61;
+}
+
+
+#btnarr{
+    background-color: transparent;
+}
+
+
+.firstrow{
+    display: flex;
+    gap: 90px;
+}
+.secondrow{
+    display: flex;
+    gap: 90px;
+}
+
+
+.ourdoctors{
+    height: 120vh;
+    background-color: white;
+}
+
+.doc-content{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 5%;
+}
+
+
+.doc-top h2{
+    color: #3498DB;
+    font-size: 60px;
+    text-align: center;
+}
+
+
+#topdoc {
+    background-color: #2ecc70a8;
+    border: 4px solid #5EE088;
+    padding: 8px 20px;
+    border-radius: 12px 12px 0px 12px;
+    font-size: 16px;
+    font-weight: 700;
+    width: 200px;
+    margin-bottom: 25px;
+    position: relative;
+    margin-left: 120px;
+}
+
+.doc-main-content{
+    width: 100%;
+    height: 100%;
+}
+.doc-co{
+    display: flex;
+    justify-content: center;
+}
+.doccard{
+    width: 20%;
+    height: 40%;
+    background-color: #F5F8FA;
+    border-radius: 23px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    color: black;
+    margin-top: 3%;
+}
+
+.doccard img{
+    height: 70%;
+}
+
+
