--- a/Code/styles/style.css
+++ b/Code/styles/style.css
@@ -62,7 +62,7 @@ nav a {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: -10px;
+    bottom: -20px;
 }
 
 .nright {
@@ -629,6 +629,7 @@ nav a {
     color: #3498DB;
     font-size: 60px;
     text-align: center;
+    position: relative;
 }
 
 
@@ -1213,4 +1214,50 @@ footer {
     width: 100%;
     height: 70vh;
     z-index: -99;
+}
+
+
+.about-content-page{
+    display: flex;
+    flex-direction: column;
+}
+
+.card{
+    display: flex;
+    color: black;
+    gap: 23px;
+    padding: 23px 60px 90px 23px;
+    height: 80%;
+    width: 30%;
+    background-color: white;
+    box-shadow:1px 1px 6px 1px black;
+    border: transparent;
+    border-radius: 12px;
+    text-align: start;
+    height: 120%;
+    width: 450px;
+    margin-top: 8%;
+    margin-left: 18%;
+}
+.cright{
+    display: flex;
+    flex-direction: column;
+    gap: 23px;    
+}
+.cleft{
+    margin-top: 5%;
+}
+.card p{
+    color: #5B5B5B;
+    width: 300px;
+}
+
+.card h5{
+    color: #3498DB;
+    font-size: 20px;
+
+}
+
+.about-row1{
+    display: flex;
 }
