changing names of images - validator W3

--- a/Code/styles/style.css
+++ b/Code/styles/style.css
@@ -976,7 +976,7 @@ nav a {
 
 .book-appointment-section {
     padding: 80px 40px;
-    background-image: url(../media/call-in-action/Rectangle\ 96.png);
+    background-image: url(../media/call-in-action/Rectangle-96.png);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -1270,7 +1270,6 @@ footer {
     display: flex;
     
 }
-
 
 
 
